still trying to fix background on iOS

--- a/style.css
+++ b/style.css
@@ -83,18 +83,18 @@
   }
 }
 
-html {
+body {
   background: url("./images/DSC_1628 resized 1250x835.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: scroll;
   background-attachment: fixed;
   height: 100vh;
 }
 
 
-html:after{
+body:after{
   position:fixed;
   content:"";
   top:0;
@@ -104,6 +104,7 @@ html:after{
   background:rgba(255,255,255,0.05);
   z-index:-1;
 }
+
 
 h3 {
 
